--- a/index.html
+++ b/index.html
@@ -19,7 +19,38 @@
         </div>
     </nav>
     <div class="container">
-        
+        <div class="text-center mt-5">
+            <h2>Your Todos:</h2>
+        </div>
+        <div class="col-md-12 text-center">
+            <div class="row">
+                <div class="col-4">
+                    <h2>Todo 1</h2>
+                </div>
+                <div class="col-4">
+                    <h2>Todo 2</h2>
+                </div>
+                <div class="col-4">
+                    <h2>Todo 3</h2>
+                </div>
+            </div>
+        </div>
+        <div class="text-center mt-4">
+            <button class="btn btn-lg add btn-outline-success" onclick="openModal()">Add New Todo</button>
+        </div>
+    </div>
+    <div class="modalAdd">
+        <div class="modalContent">
+            <span class="close" onclick="openModal()">&times;</span>
+            <input type="text" class="todoTitle" placeholder="Title...">
+            <br />
+            <input type="text" class="todoContent" placeholder="Task...">
+            <br />
+            <div class="align-self-center">
+                <button class="btn btn-outline-success add">Add</button>
+                <button class="btn btn-outline-danger back" onclick="openModal()">Back</button>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
